# TetrisGA

./: DQN_main.py  DQN_performances.csv  DQN_performances.xlsx  GUI_Menu.py  GUI_RunMenu.py  GUI_StartMenu.py  PlotUtils.py  README.md  SaveModel.py  SaveModelNotebook.ipynb  Tetris.py  TetrisAgents.py  TetrisClass.py  TetrisParallel.py  TetrisParallelClass.py  TetrisSettings.py  TetrisSolo.py  TetrisUtils.py  evaluation.py  pyproject.toml  requirements.txt  retrieve_best_agent.py  saved_score_evaluation_ga.csv  saved_score_evaluation_ga_run_1.csv  test_SaveModel.py  test_TetrisUtils.py  training.py  weights_trained.h5
Acceleration/: heuristic_speed.ipynb
Analysis/: DecisionTreeAnalysis.ipynb  FeatureSelection.ipynb  GA_VS_DQN.ipynb
GUI/: Menu.py  RunMenu.py  StartMenu.py  otherMenu.py
SavedModel/: model_gen_1.csv  model_gen_10.csv  model_gen_100.csv  model_gen_16.csv  model_gen_19.csv  model_gen_2.csv  model_gen_20.csv  model_gen_21.csv  model_gen_22.csv  model_gen_23.csv  model_gen_25.csv  model_gen_26.csv  model_gen_27.csv  model_gen_29.csv  model_gen_3.csv  model_gen_30.csv  model_gen_31.csv  model_gen_35.csv  model_gen_37.csv  model_gen_39.csv  model_gen_4.csv  model_gen_40.csv  model_gen_41.csv  model_gen_42.csv  model_gen_44.csv  model_gen_46.csv  model_gen_48.csv  model_gen_49.csv  model_gen_5.csv  model_gen_51.csv  model_gen_52.csv  model_gen_54.csv  model_gen_55.csv  model_gen_56.csv  model_gen_57.csv  model_gen_6.csv  model_gen_61.csv  model_gen_64.csv  model_gen_66.csv  model_gen_67.csv  (+18 more)
all_weights_time_500_gen_50_training/: model_gen_1.csv  (+2 more)
(+839 files in other folders)
