[tool.poetry]
name = "tetrisgapoetry"
version = "0.1.0"
description = ""
authors = ["LoicULB <loic.quivron@ulb.be>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pygame = "^2.1.2"
pandas = "^1.4.2"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
pygame-gui = "^0.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
